--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,7 +10,7 @@ author:
     I would love to chat and share about my experience as a PhD student pursuing deep learning research.
     Thanks for dropping by!
   social:
-    twitter: shelvia1039
     github: shelvia1039
     email: shelvia1039@gmail.com
     instagram: she.l.earns
+    blogger: shelviawongso
