--- a/_data/social.yml
+++ b/_data/social.yml
@@ -6,10 +6,10 @@ instagram:
   name: Instagram
   icon: icon-instagram
   prepend: 'https://instagram.com/'
-twitter:
-  name: Twitter
-  icon: icon-twitter
-  prepend: 'https://twitter.com/'
+blogger:
+  name: Blogger
+  icon: icon-blogger
+  prepend: "https://www.medium.com/@"
 github:
   name: GitHub
   icon: icon-github
