--- a/_config.yml
+++ b/_config.yml
@@ -229,11 +229,11 @@ hydejack:
 
 collections:
   featured_categories:
-    permalink:         /:name/
+    permalink:         shelvia/:name/
     output:            true
 
   featured_tags:
-    permalink:         /tag-:name/
+    permalink:         shelvia/tag-:name/
     output:            true
 
 
