--- a/_config.yml
+++ b/_config.yml
@@ -229,11 +229,11 @@ hydejack:
 
 collections:
   featured_categories:
-    permalink:         :name/
+    permalink:         /:name/
     output:            true
 
   featured_tags:
-    permalink:         tag-:name/
+    permalink:         /tag-:name/
     output:            true
 
 
