--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ author:
     Hi, my name is Shelvia.
     I mainly post about my plans as well as my PhD journey here.
     If you are interested, you can check out the list of projects I have done in my Github.
-    I also summarize some research papers that I read on my Medium page.
+    I also write some articles on deep learning (and physics sometimes) on my Medium page.
     Feel free to e-mail me if you would like to reach out to me! All the links are provided below.
     I would love to chat and share about my experience as a PhD student pursuing deep learning research.
     Thanks for dropping by!
